--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,7 +25,7 @@ body {
     font-size: 18px;
     line-height: 1.5;
     color: #cacaca;
-    background-color: #08020d;
+    background-color: white;
 }
 
 h1 {
