--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1,3 +1,26 @@
+@font-face {
+    font-weight: 400;
+    font-family: "Roboto";
+    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+  }
+
+  @font-face {
+    font-weight: 500;
+    font-family: "Roboto Medium";
+    src: url("../fonts/Roboto-Medium.ttf")  format("truetype");
+  }
+  
+  @font-face {
+    font-weight: 700;
+    font-family: "Roboto Bold";
+    src: url("../fonts/Roboto-Bold.ttf")  format("truetype");
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+
+
 body {
     font-family: Roboto, sans-serif;
     font-size: 18px;
