--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-weight: 400;
     font-family: "Roboto";
     src: url("../fonts/Roboto-Regular.ttf") format("truetype");
@@ -25,7 +25,7 @@ body {
     font-size: 18px;
     line-height: 1.5;
     color: #cacaca;
-    background-color: white;
+    background-color: #08020D;
 }
 
 h1 {
@@ -56,4 +56,4 @@ h2 {
         font-weight: bold;
         text-transform: uppercase;
     }
-}
+}*/
