--- a/src/css/app.css
+++ b/src/css/app.css
@@ -60,7 +60,9 @@ h2 {
 }
 
 header {
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
+  position: relative;
 }
 
 .main-header {
@@ -69,13 +71,22 @@ header {
   background-size: cover;
 }
 
+.header-logo {
+  width: 25px;
+  height: 25px;
+}
+
 .header-navigation {
   padding-top: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-size: 11px;
+  font-weight: normal;
 }
 
 .header-navigation-item {
@@ -84,11 +95,165 @@ header {
 }
 
 .header-nav-left {
-  padding-left: 159px;
+  padding-left: 119px;
+}
+
+.header-nav-middle {
+  padding-left: 90px;
+}
+
+.header-nav-right {
+  padding-right: -121px;
+}
+
+.navigation-search-form {
+  width: 248px;
+  height: 25px;
+  padding: 0;
+  margin-right: 0;
+  border-radius: 50px;
+  background-color: #3C3B3D;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-color: transparent;
 }
 
 .header-main {
-  margin-top: 150px;
-  margin-bottom: 200px;
+  padding-top: 150px;
+  padding-bottom: 200px;
+  margin-left: 120px;
+  margin-right: 120px;
+  text-align: center;
+}
+
+.header-main-title,
+.header-secont-title,
+.header-description {
+  margin: 0;
+}
+
+.header-secont-title {
+  padding-bottom: 31px;
+}
+
+.header-register-forms {
+  display: -ms-grid;
+  display: grid;
+  grid-column-gap: 24px;
+}
+
+.header-button {
+  width: 570px;
+  border-radius: 5px;
+  padding: 20px 30px;
+  background-color: #34C176;
+  color: white;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.header-form-name,
+.header-form-email {
+  background-color: transparent;
+  border: 2px solid #cacaca;
+  border-radius: 3px;
+  min-width: 270px;
+  min-height: 50px;
+  padding-left: 20px;
+  margin-bottom: 1.5rem;
+}
+
+.header-form-name {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+.header-form-email {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 1;
+  grid-row: 1;
+}
+
+.subscription {
+  padding-top: 100px;
+  text-align: center;
+}
+
+.subscription-items {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 46.8px;
+  padding-bottom: 50px;
+}
+
+.subscription-item {
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+  border-radius: 1rem;
+}
+
+.sub-item-bg-1 {
+  background-image: url("../images/subscribe_1.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.sub-item-bg-2 {
+  background-image: url("../images/subscribe_2.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.sub-item-bg-3 {
+  background-image: url("../images/subscribe_3.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.subs-title {
+  color: white;
+  text-transform: uppercase;
+}
+
+.sub-button {
+  background-color: transparent;
+  border: 2px solid #cacaca;
+  border-radius: 3px;
+  min-width: 270px;
+  min-height: 50px;
+  padding-left: 20px;
+  margin-bottom: 1.5rem;
+  color: white;
+}
+
+.sub-button:hover {
+  background-color: #cacaca;
+  opacity: 50%;
+}
+
+.pricing-value {
+  line-height: 1em;
+  padding-top: 260px;
+  padding-bottom: 40px;
+  margin: 0;
+  font-size: 64px;
+}
+
+.prise-up {
+  font-size: 32px;
+}
+
+.sub-section-note {
+  margin: 0;
 }
 /*# sourceMappingURL=app.css.map */
