--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,5 +1,9 @@
+@import "variables";
+
 header {
-    width: 1200px;
+    width: 100%;
+    max-width: 1200px;
+    position: relative;
 }
 
 .main-header {
@@ -8,11 +12,21 @@ header {
     background-size: cover;
 }
 
+.header-logo {
+    width: 25px;
+    height: 25px;
+}
+
 .header-navigation {
     padding-top: 25px;
 
     display: flex;
-    flex-wrap: nowrap;
+    flex-direction: row;
+    
+
+
+    font-size: 11px;
+    font-weight: normal;
 }
 
 .header-navigation-item {
@@ -21,11 +35,87 @@ header {
 }
 
 .header-nav-left {
-  padding-left: 159px;
- 
+  padding-left: 119px;
+}
+
+.header-nav-middle {
+    padding-left: 90px;
+}
+
+.header-nav-right {
+    padding-right: -121px;
+}
+
+.navigation-search-form {
+    width: 248px;
+    height: 25px;
+    padding: 0;
+    margin-right: 0;
+    border-radius: 50px;
+    background-color: $dark;
+    box-sizing: border-box;
+    border-color: transparent;
 }
 
 .header-main {
-    margin-top: 150px;
-    margin-bottom: 200px;
+    padding-top: 150px;
+    padding-bottom: 200px;
+
+    margin-left: 120px;
+    margin-right: 120px;
+
+    text-align: center;
 }
+
+.header-main-title,
+.header-secont-title,
+.header-description {
+    margin: 0;
+}
+
+.header-secont-title {
+    padding-bottom: 31px;
+}
+
+.header-register-forms {
+    display: grid;
+    grid-column-gap: 24px;
+  }
+
+
+.header-button {
+    width: 570px;
+    border-radius: 5px;
+    padding: 20px 30px;
+    background-color: #34C176;
+    color: white;
+    
+    grid-column: 1/3;
+    grid-row: 2;
+  }
+
+
+.header-form-name,
+.header-form-email {
+    background-color: transparent;
+    border: 2px solid #cacaca;
+    border-radius: 3px;
+
+    min-width: 270px;
+    min-height: 50px;
+
+    padding-left: 20px;
+
+    margin-bottom: 1.5rem;
+}
+
+
+.header-form-name {
+    grid-column: 1/2;
+    grid-row: 1;
+  }
+  
+  .header-form-email {
+    grid-column: 2/3;
+    grid-row: 1;
+  }
