--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,3 +2,6 @@
 @import './general.scss';
 @import './header';
 @import './subscription';
+@import './news';
+@import './mobile-app';
+@import './footer';
