--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -48,6 +48,10 @@ h3 {
   font-size: 30px;
 }
 
+.white-color {
+  color: white;
+}
+
 @media (max-width: 770px) {
     h1 {
         font-size: 30px;
