--- a/src/css/app.css
+++ b/src/css/app.css
@@ -46,6 +46,10 @@ h3 {
   font-size: 30px;
 }
 
+.white-color {
+  color: white;
+}
+
 @media (max-width: 770px) {
   h1 {
     font-size: 30px;
@@ -163,6 +167,10 @@ header {
   margin: 0;
 }
 
+.header-description {
+  padding-bottom: 17px;
+}
+
 .header-secont-title {
   padding-bottom: 31px;
 }
@@ -171,10 +179,16 @@ header {
   display: -ms-grid;
   display: grid;
   grid-column-gap: 24px;
+  max-width: 570px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: 195px;
 }
 
 .header-button {
-  width: 1070px;
+  /*width: 1070px;*/
+  min-width: 570px;
   border-radius: 5px;
   padding: 20px 30px;
   background-color: #34C176;
@@ -211,6 +225,84 @@ header {
   grid-column: 2/3;
   -ms-grid-row: 1;
   grid-row: 1;
+}
+
+@media (max-width: 770px) {
+  header {
+    width: 100%;
+    max-width: 770px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+  .header-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    padding: 27px 0 0 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .header-nav-middle {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 0;
+    padding-top: 17px;
+  }
+  .header-navigation-item {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    -ms-grid-column-align: center;
+        justify-self: center;
+  }
+  .header-nav-left {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+    justify-self: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navigation-search-form {
+    width: 70vh;
+    margin-top: 17px;
+  }
+  .header-main {
+    margin: 0;
+  }
+  .header-register-forms {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+  }
+  .header-button {
+    min-width: 270px;
+  }
+  .mobile-grey {
+    color: #CACACA;
+  }
+  .mobile-white {
+    color: white;
+  }
 }
 
 .subscription {
