--- a/src/css/app.css
+++ b/src/css/app.css
@@ -278,7 +278,7 @@ header {
             justify-content: center;
   }
   .navigation-search-form {
-    width: 70vh;
+    width: 58vh;
     margin-top: 17px;
   }
   .header-main {
@@ -386,6 +386,45 @@ header {
   margin: 0;
 }
 
+@media (max-width: 770px) {
+  .subscription {
+    width: 100%;
+    max-width: 770px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0;
+  }
+  .sub-title {
+    margin: 0;
+    padding-bottom: 46px;
+  }
+  .subscription-items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 24px;
+  }
+  .sub-description {
+    margin: 0;
+    padding-top: 64px;
+    padding-bottom: 87px;
+  }
+  .subs-title {
+    font-size: 16px;
+    margin-bottom: 0;
+  }
+  .sub-price {
+    padding-top: 203px;
+  }
+  .sub-button {
+    margin-bottom: 0;
+  }
+}
+
 .news {
   padding-top: 100px;
   margin-right: 120px;
@@ -453,6 +492,64 @@ header {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+}
+
+@media (max-width: 770px) {
+  .news {
+    width: 100%;
+    max-width: 770px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0;
+  }
+  .news-header {
+    margin: 0;
+    padding-bottom: 48px;
+  }
+  .news-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .news-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .news_image {
+    width: 374px;
+    height: 186px;
+  }
+  .news-item-header {
+    font-size: 16px;
+    margin-bottom: 0;
+    padding-top: 50px;
+    padding-bottom: 16px;
+  }
+  .news-about {
+    margin: 0;
+    padding-bottom: 24px;
+  }
+  .news-btn {
+    margin-top: 48px;
+  }
+  .news-item-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
 }
 
 .mobile-app {
