--- a/src/css/_mobile-app.scss
+++ b/src/css/_mobile-app.scss
@@ -36,3 +36,42 @@
         opacity: 1;
     }
 }
+
+@media (max-width: 770px) {
+    .mobile-app {
+       width: 100%;
+       max-width: 770px;
+       padding-right: 20px;
+       padding-left: 20px;
+       margin: 0;
+    }
+
+    .mobile-app-description {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .mob-app-left {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mobile-app {
+        margin: 0;
+        padding-bottom: 48px;
+    }
+
+    .mobile-app-image {
+        align-self: center;
+    }
+
+    .mobile-about {
+        margin-bottom: 0;
+    }
+
+    .mobile-app-button {
+        margin-bottom: 80px;
+        width: 131px;
+    }
+    
+}
