--- a/src/css/app.css
+++ b/src/css/app.css
@@ -591,6 +591,50 @@ header {
   opacity: 1;
 }
 
+@media (max-width: 770px) {
+  .mobile-app {
+    width: 100%;
+    max-width: 770px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0;
+  }
+  .mobile-app-description {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .mob-app-left {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .mobile-app {
+    margin: 0;
+    padding-bottom: 48px;
+  }
+  .mobile-app-image {
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .mobile-about {
+    margin-bottom: 0;
+  }
+  .mobile-app-button {
+    margin-bottom: 80px;
+    width: 131px;
+  }
+}
+
 .main-footer {
   padding-top: 3rem;
   padding-bottom: 2rem;
@@ -670,5 +714,30 @@ header {
 
 .footer-img-marg {
   margin-right: 24px;
+}
+
+@media (max-width: 770px) {
+  .main-footer {
+    width: 100%;
+    max-width: 770px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin: 0;
+  }
+  .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-line-pack: start;
+        align-content: flex-start;
+  }
+  .footer-navigation-line {
+    display: flex;
+    flex-direction: column;
+}
 }
 /*# sourceMappingURL=app.css.map */
