--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1,69 +1,67 @@
 @font-face {
-    font-weight: 400;
-    font-family: "Roboto";
-    src: url("../fonts/Roboto-Regular.ttf") format("truetype");
-  }
+  font-weight: 400;
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Regular.ttf") format("truetype");
+}
 
-  @font-face {
-    font-weight: 500;
-    font-family: "Roboto Medium";
-    src: url("../fonts/Roboto-Medium.ttf")  format("truetype");
-  }
-  
-  @font-face {
-    font-weight: 700;
-    font-family: "Roboto Bold";
-    src: url("../fonts/Roboto-Bold.ttf")  format("truetype");
-  }
-  
- /* * {
-    box-sizing: border-box;
-  }*/
+@font-face {
+  font-weight: 500;
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Medium.ttf")  format("truetype");
+}
+
+@font-face {
+  font-weight: 700;
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Bold.ttf")  format("truetype");
+}
 
 
 body {
-    font-family: Roboto, sans-serif;
-    /*font-size: 18px;*/
-    line-height: 1.5;
-    background-color: #08020d;
-    color: #cacaca;
-    margin: 0;
+  font: 18px/1.5 Roboto, sans-serif;
+  background-color: #08020d;
+  color: #cacaca;
+  margin: 0;
 }
 
 h1 {
-    font-size: 60px;
-    line-height: 90px;
-    font-weight: bold;
-    text-transform: uppercase;
+  font-size: 60px;
+  line-height: 90px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-block: 0;
 }
-
 h2 {
-    /*font-size: 38px;*/
-    line-height: 57px;
-    font-weight: bold;
-    text-transform: uppercase;    
+  font-size: 38px;
+  line-height: 57px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0;
 }
 
-h3 {
-  font-size: 30px;
+.btn {
+  padding: 20px 30px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  border-color: transparent;
 }
 
-.white-color {
-  color: white;
+.bright-text-color {
+  color: #FFFFFF;
 }
+
 
 @media (max-width: 770px) {
-    h1 {
-        font-size: 30px;
-        line-height: 45px;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-
-    h2 {
-        font-size: 18px;
-        line-height: 27px;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
+  h1 {
+    font-size: 30px;
+    line-height: 45px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  h2 {
+    font-size: 18px;
+    line-height: 27px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 }
