--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,7 +1,13 @@
 @import './variables.scss';
 @import './general.scss';
 @import './header';
+@import './main-container';
+@import './mains-desc';
+@import './apps';
+@import './footer';
+@import './page-disco';
 @import './subscription';
 @import './news';
-@import './mobile-app';
-@import './footer';
+@import './popular-tracks';
+@import './discography';
+@import './similiar-artists';
