--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -1,96 +1,75 @@
-.main-footer {
-    padding-top: 3rem;
-    padding-bottom: 2rem;  
-   
-    max-width: 1440px;
+@import "variables";
+
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 .bg-gradient {
-    background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
-  }
-
-.footer-container {
-    display: grid;
-    grid-template-columns: repeat(4, 270px);
-    grid-column-gap: 40px;
-
-   
-
-
-    margin-right: 120px;
-    margin-bottom: 72px;
-    margin-left: 120px;
+  background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
 }
 
-.footer-item {
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
+.footer-top-part {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
+  padding-top: 62px;
+  padding-bottom: 72px;
+  width: 100%;
 }
 
-.link-title {
-    font-weight: 18px;
-    line-height: 27px;
-    text-transform: uppercase;
-    font-weight: bold;
+.line {
+  border: 1px solid $darkgrey;
+  box-sizing: border-box;
+  border-radius: 0;
+  width: 100%;
 }
 
-.footer-link {
-    text-decoration: none;
-    color: #E0E0E0;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: normal;
+.footer-down-part {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-items: flex-start;
+  padding-top: 40px;
+  padding-bottom: 49px;
+  width: 100%;
 }
 
-.footer-navigation-line {
-border-top: 1px solid #CACACA;
-
-margin-bottom: 40px;
+.footer-topic {
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 16px;
+  color: #FFFFFF;
 }
 
-.footer-navigation-links {
-    margin-top: 40px;
+a {
+  color: $darkgrey;
 }
 
-
-.footer-link-bottom {
-    padding-right: 16px;
-    margin-top: 40px;
-
-    &:first-child {
-        padding-left: 120px;
-    }
-}
-
-.footer-images {
-display: flex;
-flex-direction: row;
-}
-
-.footer-img-marg {
-    margin-right: 24px;
+.media {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  gap: 24px;
 }
 
 @media (max-width: 770px) {
-    .main-footer {
-       width: 100%;
-       max-width: 770px;
-       padding-right: 20px;
-       padding-left: 20px;
-       margin: 0;
-    }
-
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        align-content: flex-start;
-    }
-    
-    .footer-navigation-line {
-        display: flex;
-        flex-direction: column;
-    }
-    
+  .footer-top-part {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 1fr auto auto;
+    justify-items: start;
+    width: 100%;
+    padding-bottom: 75px;
+  }
+  .footer-down-part {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    padding-bottom: 48px;
+  }
 }
