--- a/src/css/_subscription.scss
+++ b/src/css/_subscription.scss
@@ -1,129 +1,120 @@
-.subscription {
-    padding-top: 100px;
+@import "variables";
 
-    text-align: center;
-    margin-right: 120px;
-    margin-left: 120px;
+.page-pricing-background {
+  width: 100%;
+  background: $black;
 }
 
-.subscription-items {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 46.8px;
-
-    padding-bottom: 50px;
+#page-pricing {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  color: #FFFFFF;
+}
+.page-pricing-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 1200px;
 }
 
-.subscription-item {
-    padding-right: 1.5rem;
-    padding-left: 1.5rem;
-
-    border-radius: 1rem;
+.pricing-cards {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: 47px;
+  margin-top: 45px;
+  margin-bottom: 50px;
 }
 
-.sub-item-bg-1 {
-    background-image: url('../images/subscribe_1.png');
-    background-position: center;
-    background-size: cover;
+.page-pricing-btn {
+  padding: 20px 30px;
+  border-radius: 5px;
+  width: 100%;
+  background-color: transparent;
+  border: 1px solid #CACACA;
 }
 
-.sub-item-bg-2 {
-    background-image: url('../images/subscribe_2.png');
-    background-position: center;
-    background-size: cover;
+a {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
-
-.sub-item-bg-3 {
-    background-image: url('../images/subscribe_3.png');
-    background-position: center;
-    background-size: cover;
+.pricing-item {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  padding-bottom: 64px;
+  border-radius: 1rem;
+  font-size: 12.8px;
+  line-height: 19.2px;
+  font-weight: normal;
 }
 
-.subs-title {
-    color: white;
-    text-transform: uppercase;
-}
-
-.sub-description {
-    font-weight: 12.8px;
-}
-
-.sub-button {
-    background-color: transparent;
-    border: 2px solid #cacaca;
-    border-radius: 3px;
-
-    min-width: 270px;
-    min-height: 50px;
-
-    padding-left: 20px;
-
-    margin-bottom: 1.5rem;
-
-    color: white;
-
-    &:hover {
-        background-color: #cacaca;
-        opacity: 50%;
-    }
+.pricing-item h3 {
+  font-size: 24px;
+  line-height: 36px;
+  text-transform: uppercase;
 }
 
 .pricing-value {
-    line-height: 1em;
-    padding-top: 120px;
-    padding-bottom: 40px;
-    margin: 0;
-
-    font-size: 64px;
+  display: flex;
+  font-size: 64px;
+  line-height: 64px;
+  margin-top: 200px;
+  margin-bottom: 64px;
 }
 
-.prise-up {
-    font-size: 32px;
+.currency {
+  font: normal 32px/1.5 Roboto, sans-serif;
 }
 
-.sub-section-note {
-    margin: 0;
+.pricing-footer {
+  margin-top: 64px;
+  display: flex;
+  text-align: center;
 }
 
+.bg-1 {
+  background-image: url('../images/subscribe_1.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.bg-2 {
+  background-image: url('../images/subscribe_2.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.bg-3 {
+  background-image: url('../images/subscribe_3.png');
+  background-position: center;
+  background-size: cover;
+}
+
+.page-pricing-footer {
+  width: 100%;
+  display: flex;
+  text-align: center;
+  font: normal 16px/1.5 Roboto, sans-serif;
+}
 
 @media (max-width: 770px) {
-    .subscription {
-        width: 100%;
-        max-width: 770px;
-       padding-right: 20px;
-       padding-left: 20px;
-       margin: 0;
-    }
-
-    .sub-title {
-        margin: 0;
-        padding-bottom: 46px;
-    }
-   
-    .subscription-items {
-       display: flex;
-       flex-direction: column;
-       gap: 24px;
-      
-    }
-
-    .sub-description {
-        margin: 0;
-        padding-top: 64px;
-        padding-bottom: 87px;
-    }
-    
-    .subs-title {
-        font-size: 16px;
-        margin-bottom: 0;
-    }
-
-    .sub-price {
-        padding-top: 203px;
-    }
-
-    .sub-button {
-        margin-bottom: 0;
-    }
+  .pricing-cards {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    width: calc(100% - 40px);
+  }
+  .page-pricing-footer {
+    width: calc(100% - 40px);
+  }
 }
