--- a/src/css/_main-container.scss
+++ b/src/css/_main-container.scss
@@ -22,6 +22,10 @@
   .align-stretch {
     align-items: stretch;
   }
+
+  .btn-green {
+    background-color: #34C176;
+  }
   
   
   @media (max-width: 770px) {
