--- a/src/css/app.css
+++ b/src/css/app.css
@@ -130,6 +130,10 @@ header {
   color: #FFFFFF;
 }
 
+.grey-color {
+  color: #CACACA;
+}
+
 .search-form {
   width: 248px;
   height: 25px;
@@ -258,6 +262,10 @@ header {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
+}
+
+.btn-green {
+  background-color: #34C176;
 }
 
 @media (max-width: 770px) {
@@ -692,6 +700,15 @@ a {
   gap: 24px;
 }
 
+.footer-items-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-adress {
+  margin: 0;
+}
+
 @media (max-width: 770px) {
   .footer-top-part {
     display: -ms-grid;
@@ -837,17 +854,17 @@ h3 {
   width: 100%;
   background-color: transparent;
   border: 1px solid #CACACA;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
 }
 
 a {
   text-decoration: none;
-  color: #FFFFFF;
 }
 
 .pricing-item {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  /*flex: 1;*/
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -858,8 +875,10 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+  /*padding-left: 1.5rem;
+  padding-right: 1.5rem;*/
+  padding-right: 25px;
+  padding-left: 25px;
   padding-bottom: 64px;
   border-radius: 1rem;
   font-size: 12.8px;
@@ -871,6 +890,8 @@ a {
   font-size: 24px;
   line-height: 36px;
   text-transform: uppercase;
+  font-weight: 400;
+  margin-top: 17px;
 }
 
 .pricing-value {
