--- a/src/css/app.css
+++ b/src/css/app.css
@@ -705,6 +705,14 @@ a {
   padding: 0;
 }
 
+.footer-item {
+  font-size: 16px;
+}
+
+.footer-down-part-item {
+  font-size: 16px;
+}
+
 .footer-adress {
   margin: 0;
 }
