--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -12,7 +12,7 @@ footer {
 
 .footer-top-part {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 1fr);
   gap: 40px;
   padding-top: 62px;
   padding-bottom: 72px;
@@ -41,7 +41,7 @@ footer {
   line-height: 27px;
   font-weight: bold;
   text-transform: uppercase;
-  margin-bottom: 16px;
+  margin-bottom: 15px;
   color: #FFFFFF;
 }
 
@@ -71,6 +71,7 @@ font-size: 16px;
 
 .footer-adress {
   margin: 0;
+  font-size: 15px;
 }
 
 @media (max-width: 770px) {
