--- a/src/css/_main-container.scss
+++ b/src/css/_main-container.scss
@@ -5,14 +5,14 @@
   }
   
   .content-wrapper {
-    display: flex;
+    /*display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
     justify-content: center;
-    justify-items: center;
+    justify-items: center;*/
     width: 100%;
-    max-width: 1200px;
+    /*max-width: 1200px;*/
   }
   
   .align-left {
