--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -17,6 +17,9 @@ footer {
   padding-top: 62px;
   padding-bottom: 72px;
   width: 100%;
+
+  margin-right: 120px;
+  margin-left: 120px;
 }
 
 .line {
@@ -24,6 +27,7 @@ footer {
   box-sizing: border-box;
   border-radius: 0;
   width: 100%;
+  margin: 0;
 }
 
 .footer-down-part {
@@ -34,6 +38,9 @@ footer {
   padding-top: 40px;
   padding-bottom: 49px;
   width: 100%;
+
+  margin-left: 120px;
+  margin-right: 120px;
 }
 
 .footer-topic {
