--- a/src/css/app.css
+++ b/src/css/app.css
@@ -640,6 +640,8 @@ footer {
   padding-top: 62px;
   padding-bottom: 72px;
   width: 100%;
+  margin-right: 120px;
+  margin-left: 120px;
 }
 
 .line {
@@ -648,6 +650,7 @@ footer {
           box-sizing: border-box;
   border-radius: 0;
   width: 100%;
+  margin: 0;
 }
 
 .footer-down-part {
@@ -663,6 +666,8 @@ footer {
   padding-top: 40px;
   padding-bottom: 49px;
   width: 100%;
+  margin-left: 120px;
+  margin-right: 120px;
 }
 
 .footer-topic {
