--- a/src/css/app.css
+++ b/src/css/app.css
@@ -16,12 +16,20 @@
   src: url("../fonts/Roboto-Bold.ttf") format("truetype");
 }
 
+body, html {
+  width: 100%;
+}
+
 body {
   font: 18px/1.5 Roboto, sans-serif;
   background-color: #08020d;
   color: #cacaca;
   margin: 0;
-  width: 100%;
+}
+
+section {
+  min-width: 100%;
+  position: relative;
 }
 
 h1 {
@@ -630,7 +638,8 @@ footer {
 
 .bg-gradient {
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
-  width: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 .footer-top-part {
