--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -8,8 +8,8 @@ footer {
 
 .bg-gradient {
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
-
-  width: 100%;
+  background-position: center;
+  background-size: cover;
 }
 
 .footer-top-part {
